--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "3.1.0",
   "private": true,
   "scripts": {
-    "dev": "keystone-next dev",
-    "start": "keystone-next start",
-    "build": "keystone-next build",
-    "postinstall": "keystone-next postinstall"
+    "dev": "keystone dev",
+    "start": "keystone start",
+    "build": "keystone build",
+    "postinstall": "keystone postinstall"
   },
   "dependencies": {
-    "@keystone-next/auth": "^36.0.0",
-    "@keystone-next/fields-document": "^13.0.0",
-    "@keystone-next/keystone": "^28.0.0",
+    "@keystone-6/auth": "1.0.2",
+    "@keystone-6/core": "1.0.1",
+    "@keystone-6/fields-document": "^1.0.0",
     "typescript": "^4.4.4"
   },
   "engines": {
